Current Release
- Fixed ipv6 tests in core helpers regtest.
- Made specific errors if functions in RemoveRecord fail.
- Made UnReverseIP more robust.
- Made ReverseIP more robust.
- Made DbAccess thread safe.
- Fixed deadlock condition with all table lock.
- Fixed key error if no reverse range zone assignments were found.

2009-09-23 release-0.5
- Made trunk install as version 0.1
- Fixed current_version variable in setups

2009-09-14 release-0.3

2009-09-09 release-0.1b2

2009-8-25 Release-0.1b1
- First Release