@@ -6,6 +6,8 @@ Current Release
 - Made DbAccess thread safe.
 - Fixed deadlock condition with all table lock.
 - Fixed key error if no reverse range zone assignments were found.
+- Made ExpandIPV6 funciton in core_helpers.
+- Fixed error when sending a record_args_dict of None to ListRecords.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
